[project]
name = "geopdf-downloader"
version = "0.1.0"
description = "Download geo-referenced PDFs for Minnesota state parks"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pypdf>=6.6.2",
    "rich>=13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["geopdf_downloader.py"]

[tool.hatch.build.targets.wheel.sources]
"geopdf_downloader.py" = "geopdf_downloader.py"
